--- a/testapp/service.yaml
+++ b/testapp/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "testapp-service"
+  labels:
+    app: testapp
 spec:
   ports:
     - port: 3000
@@ -9,4 +11,4 @@ spec:
       protocol: TCP
   type: NodePort
   selector:
-    app: "testapp"
+    app: testapp
