--- a/testapp/ingress.yaml
+++ b/testapp/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - path: /
             backend:
               serviceName: "testapp-service"
               servicePort: 80
